tree ocp {qp,qcqp}: add print in utils & some fixes to qcqp

--- a/tree_ocp_qp/Makefile
+++ b/tree_ocp_qp/Makefile
@@ -51,11 +51,13 @@ OBJS += d_tree_ocp_qp_sol.o
 OBJS += d_tree_ocp_qp_res.o
 OBJS += d_tree_ocp_qp_kkt.o
 OBJS += d_tree_ocp_qp_ipm.o
+OBJS += d_tree_ocp_qp_utils.o
 OBJS += d_tree_ocp_qcqp_dim.o
 OBJS += d_tree_ocp_qcqp.o
 OBJS += d_tree_ocp_qcqp_sol.o
 OBJS += d_tree_ocp_qcqp_res.o
 OBJS += d_tree_ocp_qcqp_ipm.o
+OBJS += d_tree_ocp_qcqp_utils.o
 # single
 OBJS += s_tree_ocp_qp_dim.o
 OBJS += s_tree_ocp_qp.o
@@ -63,11 +65,13 @@ OBJS += s_tree_ocp_qp_sol.o
 OBJS += s_tree_ocp_qp_res.o
 OBJS += s_tree_ocp_qp_kkt.o
 OBJS += s_tree_ocp_qp_ipm.o
+OBJS += s_tree_ocp_qp_utils.o
 OBJS += s_tree_ocp_qcqp_dim.o
 OBJS += s_tree_ocp_qcqp.o
 OBJS += s_tree_ocp_qcqp_sol.o
 OBJS += s_tree_ocp_qcqp_res.o
 OBJS += s_tree_ocp_qcqp_ipm.o
+OBJS += s_tree_ocp_qcqp_utils.o
 
 obj: $(OBJS)
 
@@ -87,6 +91,8 @@ d_tree_ocp_qp_kkt.o: d_tree_ocp_qp_kkt.c x_tree_ocp_qp_kkt.c
 s_tree_ocp_qp_kkt.o: s_tree_ocp_qp_kkt.c x_tree_ocp_qp_kkt.c
 d_tree_ocp_qp_ipm.o: d_tree_ocp_qp_ipm.c x_tree_ocp_qp_ipm.c
 s_tree_ocp_qp_ipm.o: s_tree_ocp_qp_ipm.c x_tree_ocp_qp_ipm.c
+d_tree_ocp_qp_utils.o: d_tree_ocp_qp_utils.c x_tree_ocp_qp_utils.c
+s_tree_ocp_qp_utils.o: s_tree_ocp_qp_utils.c x_tree_ocp_qp_utils.c
 d_tree_ocp_qcqp_dim.o: d_tree_ocp_qcqp_dim.c x_tree_ocp_qcqp_dim.c
 s_tree_ocp_qcqp_dim.o: s_tree_ocp_qcqp_dim.c x_tree_ocp_qcqp_dim.c
 d_tree_ocp_qcqp.o: d_tree_ocp_qcqp.c x_tree_ocp_qcqp.c
@@ -97,3 +103,5 @@ d_tree_ocp_qcqp_res.o: d_tree_ocp_qcqp_res.c x_tree_ocp_qcqp_res.c
 s_tree_ocp_qcqp_res.o: s_tree_ocp_qcqp_res.c x_tree_ocp_qcqp_res.c
 d_tree_ocp_qcqp_ipm.o: d_tree_ocp_qcqp_ipm.c x_tree_ocp_qcqp_ipm.c
 s_tree_ocp_qcqp_ipm.o: s_tree_ocp_qcqp_ipm.c x_tree_ocp_qcqp_ipm.c
+d_tree_ocp_qcqp_utils.o: d_tree_ocp_qcqp_utils.c x_tree_ocp_qcqp_utils.c
+s_tree_ocp_qcqp_utils.o: s_tree_ocp_qcqp_utils.c x_tree_ocp_qcqp_utils.c
