add c example about x0 elimination + parial condensing in ocp qp

--- a/examples/c/Makefile
+++ b/examples/c/Makefile
@@ -55,6 +55,7 @@ OCP_QCQP_DATA = data/pmsm_ocp_qcqp_data.o
 OBJS_EXMP = $(OCP_QP_DATA) example_d_ocp_qp.o
 #OBJS_EXMP = $(OCP_QP_DATA) example_d_ocp_qp_x0emb.o
 #OBJS_EXMP = $(OCP_QP_DATA) example_d_ocp_qp_part_cond.o
+#OBJS_EXMP = $(OCP_QP_DATA) example_d_ocp_qp_x0emb_part_cond.o
 #OBJS_EXMP = $(OCP_QCQP_DATA) example_d_ocp_qcqp_part_cond.o
 #OBJS_EXMP = $(OCP_QP_DATA) example_d_ocp_qp_sens.o
 #OBJS_EXMP = $(OCP_QP_DATA) example_d_ocp_qp_part_cond_sens.o
