--- a/Makefile.rule
+++ b/Makefile.rule
@@ -49,6 +49,7 @@ CURRENT_DIR := $(patsubst %/,%,$(dir $(MAKEFILE_PATH)))
 #################################################
 
 # Target architecture
+#TARGET = AVX512
 TARGET = AVX
 #TARGET = GENERIC
 
@@ -150,6 +151,9 @@ CFLAGS += -DRUNTIME_CHECKS
 endif
 
 # architecture-specific flags
+ifeq ($(TARGET), AVX512)
+CFLAGS  += -mavx512f -mavx512vl -mfma -DTARGET_AVX512
+endif
 ifeq ($(TARGET), AVX)
 CFLAGS  += -mavx -DTARGET_AVX
 endif
