--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,18 +116,15 @@ if(NOT TARGET blasfeo)
 	# select correct name for BLASFEO library
 	if(HPIPM_BLASFEO_LIB STREQUAL "Static")
 		add_library(blasfeo STATIC IMPORTED)
-		if(CMAKE_C_COMPILER_ID MATCHES MSVC)
-			set_target_properties(blasfeo PROPERTIES IMPORTED_LOCATION ${BLASFEO_PATH}/lib/blasfeo.lib)
-		else()
-			set_target_properties(blasfeo PROPERTIES IMPORTED_LOCATION ${BLASFEO_PATH}/lib/libblasfeo.a)
-		endif()
+		set_target_properties(blasfeo PROPERTIES IMPORTED_LOCATION ${BLASFEO_PATH}/lib/${CMAKE_STATIC_LIBRARY_PREFIX}blasfeo${CMAKE_STATIC_LIBRARY_SUFFIX})
 	elseif(HPIPM_BLASFEO_LIB STREQUAL "Shared")
 		add_library(blasfeo SHARED IMPORTED)
-		if(CMAKE_C_COMPILER_ID MATCHES MSVC)
-			set_target_properties(blasfeo PROPERTIES IMPORTED_LOCATION ${BLASFEO_PATH}/lib/blasfeo.dll)
-		else()
-			set_target_properties(blasfeo PROPERTIES IMPORTED_LOCATION ${BLASFEO_PATH}/lib/libblasfeo.so)
-		endif()
+		if (WIN32)
+    		set_target_properties(blasfeo PROPERTIES IMPORTED_LOCATION ${BLASFEO_PATH}/bin/${CMAKE_SHARED_LIBRARY_PREFIX}blasfeo${CMAKE_SHARED_LIBRARY_SUFFIX})
+    		set_target_properties(blasfeo PROPERTIES IMPORTED_IMPLIB ${BLASFEO_PATH}/lib/${CMAKE_IMPORT_LIBRARY_PREFIX}blasfeo${CMAKE_IMPORT_LIBRARY_SUFFIX})
+        else()
+            set_target_properties(blasfeo PROPERTIES IMPORTED_LOCATION ${BLASFEO_PATH}/lib/${CMAKE_SHARED_LIBRARY_PREFIX}blasfeo${CMAKE_SHARED_LIBRARY_SUFFIX})
+        endif()
 	endif()
 endif()
 
