small edit and some formatting

--- a/interfaces/python/Makefile
+++ b/interfaces/python/Makefile
@@ -33,8 +33,8 @@
 #                                                                                                 #
 ###################################################################################################
 
-PIP = pip
-#PIP = pip3
+#PIP = pip
+PIP = pip3
 
 all:
 	cd hpipm_python ; $(PIP) install . ; cd ..
