add dense qp example & some small interface edit

--- a/examples/c/Makefile
+++ b/examples/c/Makefile
@@ -49,7 +49,7 @@ OCP_QP_DATA = data/mass_spring_qp_data.o
 #OCP_QCQP_DATA = data/pmsm_ocp_qcqp_data.o
 #OCP_QCQP_DATA = data/ocp_qcqp_data.o 
 #OCP_QCQP_DATA = data/mass_spring_qcqp_data.o
-
+#DENSE_QP_DATA = data/getting_started_dense_qp_data.o
 
 ### select one single example ###
 
@@ -63,6 +63,7 @@ OBJS_EXMP = $(OCP_QP_DATA) example_d_ocp_qp_x0emb.o
 #OBJS_EXMP = $(OCP_QCQP_DATA) example_d_ocp_qcqp_x0emb_part_cond.o
 #OBJS_EXMP = $(OCP_QP_DATA) example_d_ocp_qp_sens.o
 #OBJS_EXMP = $(OCP_QP_DATA) example_d_ocp_qp_part_cond_sens.o
+#OBJS_EXMP = $(DENSE_QP_DATA) example_d_dense_qp.o
 
 obj: $(OBJS_EXMP)
 	$(CC) -o example.out $(OBJS_EXMP) $(LIBS)
@@ -83,6 +84,12 @@ example_d_ocp_qp_part_cond_sens \
 # ocp qcqp data
 example_d_ocp_qcqp_part_cond \
 : %: $(OCP_QCQP_DATA) %.o
+	$(CC) -o $@.out $^ $(LIBS)
+	./$@.out
+
+# dense qp data
+example_d_dense_qp \
+: %: $(DENSE_QP_DATA) %.o
 	$(CC) -o $@.out $^ $(LIBS)
 	./$@.out
 
