add c example_d_ocp_qp_x0emb_part_cond_sens

--- a/examples/c/Makefile
+++ b/examples/c/Makefile
@@ -64,8 +64,9 @@ OBJS_EXMP = $(OCP_QP_DATA) example_d_ocp_qp_x0emb.o
 #OBJS_EXMP = $(OCP_QCQP_DATA) example_d_ocp_qcqp_x0emb_part_cond.o
 #OBJS_EXMP = $(OCP_QCQP_DATA) example_d_ocp_qcqp_x0emb_cond.o
 #OBJS_EXMP = $(OCP_QP_DATA) example_d_ocp_qp_sens.o
-#OBJS_EXMP = $(OCP_QP_DATA) example_d_ocp_qp_part_cond_sens.o
 #OBJS_EXMP = $(OCP_QP_DATA) example_d_ocp_qp_cond_sens.o
+#OBJS_EXMP = $(OCP_QP_DATA) example_d_ocp_qp_part_cond_sens.o
+#OBJS_EXMP = $(OCP_QP_DATA) example_d_ocp_qp_x0emb_part_cond_sens.o
 #OBJS_EXMP = $(DENSE_QP_DATA) example_d_dense_qp.o
 #OBJS_EXMP = $(OCP_QP_DATA) example_d_ocp_qp_solver.o
 
@@ -82,6 +83,10 @@ example_d_ocp_qp_part_cond \
 example_d_ocp_qp_sens \
 example_d_ocp_qp_part_cond_sens \
 example_d_ocp_qp_cond_sens \
+example_d_ocp_qp_x0emb \
+example_d_ocp_qp_x0emb_cond \
+example_d_ocp_qp_x0emb_part_cond \
+example_d_ocp_qp_x0emb_part_cond_sens \
 : %: $(OCP_QP_DATA) %.o
 	$(CC) -o $@.out $^ $(LIBS)
 	./$@.out
