add {dense,ocp}_qp_seed (TODO flip upper constr sign)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -228,6 +228,7 @@ file(GLOB DENSE_QP_SRC
 	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qp_ipm.c
 	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qp_res.c
 	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qp_utils.c
+	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qp_seed.c
 	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qcqp_dim.c
 	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qcqp.c
 	${PROJECT_SOURCE_DIR}/dense_qp/d_dense_qcqp_sol.c
@@ -242,6 +243,7 @@ file(GLOB DENSE_QP_SRC
 	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qp_ipm.c
 	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qp_res.c
 	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qp_utils.c
+	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qp_seed.c
 	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qcqp_dim.c
 	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qcqp.c
 	${PROJECT_SOURCE_DIR}/dense_qp/s_dense_qcqp_sol.c
@@ -276,6 +278,7 @@ file(GLOB OCP_QP_SRC
 	${PROJECT_SOURCE_DIR}/ocp_qp/d_ocp_qp_res.c
 	${PROJECT_SOURCE_DIR}/ocp_qp/d_ocp_qp_utils.c
 	${PROJECT_SOURCE_DIR}/ocp_qp/d_ocp_qp_red.c
+	${PROJECT_SOURCE_DIR}/ocp_qp/d_ocp_qp_seed.c
 	${PROJECT_SOURCE_DIR}/ocp_qp/d_ocp_qcqp.c
 	${PROJECT_SOURCE_DIR}/ocp_qp/d_ocp_qcqp_dim.c
 	${PROJECT_SOURCE_DIR}/ocp_qp/d_ocp_qcqp_sol.c
@@ -291,6 +294,7 @@ file(GLOB OCP_QP_SRC
 	${PROJECT_SOURCE_DIR}/ocp_qp/s_ocp_qp_res.c
 	${PROJECT_SOURCE_DIR}/ocp_qp/s_ocp_qp_utils.c
 	${PROJECT_SOURCE_DIR}/ocp_qp/s_ocp_qp_red.c
+	${PROJECT_SOURCE_DIR}/ocp_qp/s_ocp_qp_seed.c
 	${PROJECT_SOURCE_DIR}/ocp_qp/s_ocp_qcqp.c
 	${PROJECT_SOURCE_DIR}/ocp_qp/s_ocp_qcqp_dim.c
 	${PROJECT_SOURCE_DIR}/ocp_qp/s_ocp_qcqp_sol.c
